updating writing, music, about sections

--- a/music.html
+++ b/music.html
@@ -11,16 +11,18 @@
     <header>
         <nav class="navbar">
           <div class="navbar-container">
-            <div class="mobile-menu" onclick="toggleMobileMenu()">&#9776; Menu</div>
+            <div class="mobile-menu" onclick="toggleMobileMenu()">&#9776; MENU</div>
             <div id="mobile-menu-content" class="mobile-menu-content"></div>
           </div>
         </nav>
       </header>
-    <p>I was supposed to learn drums properly in 2022, but then I got distracted with music theory and making mashups. As soon as get more original remixes in order, I'll set up a proper Spotify page. In the meantime, <a href="https://beamish-baklava-7e1a30.netlify.app/" target="_blank">I made a mock up</a> with some of my best hits.</p> 
+    <p>Music is life! Whether it's rapping on mixtapes to stay in touch with friends overseas or teaching myself guitar to try to impress girls-- music is tied to so many influential memories. And yet, just like writing, I've neglected it for years. 
+      I'm slowly studying drums, so I can build a better understanding to make my own beats. But honestly, I've been distracted with making mashups after figuring out the Camelot Wheel. 
+    <p>After I expand my catalogue of original tunes, I'll set up a proper Spotify artist page. In the meantime, <a href="https://beamish-baklava-7e1a30.netlify.app/" target="_blank">I made a mock up</a> with some of my best hits.</p> 
     <div class="preview">
       <a href="https://github.com/commdao/music-player" target="_blank"><i class="fa-brands fa-github"></i></a>
     </div>
-    <p>Choice YouTube playlists below:</p>
+    <p>YouTube Showcase:</p>
     <iframe width="390" height="243" src="https://www.youtube.com/embed/videoseries?si=o64b23czSqfC7eUd&amp;list=PL3rVUkfPR7auMM_RkhZQL16NqRwF-9K7i" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <script src="script.js"></script>
 </body>
