--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar">
           <div class="navbar-container">
-            <div class="mobile-menu" onclick="toggleMobileMenu()">&#9776; Menu</div>
+            <div class="mobile-menu" onclick="toggleMobileMenu()">&#9776; MENU</div>
             <div id="mobile-menu-content" class="mobile-menu-content"></div>
         </nav>
       </header>
