--- a/about.html
+++ b/about.html
@@ -11,17 +11,17 @@
     <header>
         <nav class="navbar">
           <div class="navbar-container">
-            <div class="mobile-menu" onclick="toggleMobileMenu()">&#9776; Menu</div>
+            <div class="mobile-menu" onclick="toggleMobileMenu()">&#9776; MENU</div>
             <div id="mobile-menu-content" class="mobile-menu-content"></div>
           </div>
         </nav>
       </header>
 
-        <p>They say you're supposed to code publicly and share your journey along the way.</p>
-        <p>Whoops. From now on!</p>
+        <p>I've worked as an educator and consultant to help others improve their personal skills.</p>
+        <p>Now, my goal is to help others on technical projects in narrative and audio design.</p>
         <iframe width="390" height="243" src="https://www.youtube.com/embed/yZmf8IjLhG4?si=w9iPC07YlmW3z_r_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        <p>One tutorial I watched said that front-end devs should put a picture of themselves on their site. My own YouTube video should be enough, yeah?</p>
-        <p>Site is HTML, CSS, and vanilla JS for now. React is next.</p>
+        <p>I plan to document my developer journey on this site, GitHub, and YouTube.</p>
+        <p>This site is HTML, with CSS and JS for now. Version 2 with React and Typescript is planned next.</p>
         <script src="script.js"></script>
 </body>
 </html>
