changing title focus

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
       </header>
 
         <p>I've worked as an educator and consultant to help others improve their personal skills.</p>
-        <p>Now, my goal is to help others on technical projects in narrative and audio design.</p>
+        <p>Now, my goal is to help others on technical projects through front end development and data analytics.</p>
         <iframe width="390" height="243" src="https://www.youtube.com/embed/yZmf8IjLhG4?si=w9iPC07YlmW3z_r_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <p>I plan to document my developer journey on this site, GitHub, and YouTube.</p>
         <p>This site is HTML, with CSS and JS for now. Version 2 with React and Typescript is planned next.</p>
