--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta property="og:image:height" content="630">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
   <link rel="stylesheet" href="style.css">
-  <title>Jon Dao - Narrative and Audio Developer</title>
+  <title>Jon Dao - Analyst & Developer</title>
 </head>
 <body>
   <header>
@@ -29,7 +29,7 @@
   <section class="hero">
     <div class="clouds"></div>
       <h1>Jon Dao</h1>
-      <p>Narrative & Audio Developer</p>
+      <p>Analyst & Developer</p>
   </section>
 
   <div id="writing" class="content-section" style="display:none;">
