added Warframe Tracker

--- a/projects.html
+++ b/projects.html
@@ -100,12 +100,8 @@
               <a href="https://beamish-baklava-7e1a30.netlify.app/">Music Player</a>
             </div>
             <div class="titleBox">
-              <img src="" alt="">
-              <a href="">Language Table</a>
-            </div>
-            <div class="titleBox">
-              <img src="" alt="">
-              <a href="">Slotmachine Stream</a>
+              <img src="media/4.png" alt="Warframe Tracker">
+              <a href="https://warframe-task-tracker.netlify.app/">Warframe Tracker</a>
             </div>
           </div>
         </div>
